@@ -4,7 +4,7 @@
 	<meta></meta>
 	<charset>UTF-8</charset>
 	<wysiwyg>tinymce</wysiwyg>
-	<lang>english_EN</lang>
+	<lang>germany_DE</lang>
 	<front_lang>germany_DE</front_lang>
 	<description></description>
 	<currency>EUR</currency>
